tests/toy/neg/001134_mutation.toylang
program a = { if sleep a then sleep; } .
